--- a/src/components/NFTList/NFTList.module.scss
+++ b/src/components/NFTList/NFTList.module.scss
@@ -1,57 +1,13 @@
 .nftListContainer {
   display: flex;
-  gap: 20px;
+  gap: 2rem;
   max-width: 1200px;
   flex-wrap: wrap;
   justify-content: center;
   margin: 0 auto;
-  margin-top: 20px;
+  margin-top: 2rem;
   padding: 0;
   list-style-type: none;
-}
-
-.nftItem {
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 16px;
-  width: 200px;
-  color: black;
-  text-align: center;
-  background-color: #f9f9f9;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s;
-
-  &:hover {
-    transform: scale(1.05);
-  }
-}
-
-.nftImage {
-  width: 100%;
-  height: auto;
-  max-width: 150px;
-  border-radius: 50%;
-  margin-bottom: 16px;
-}
-
-.nftDetails {
-  margin: 10px 0;
-  font-size: 0.9em;
-  color: #666;
-}
-
-.mintButton {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-
-  &:hover {
-    background-color: #0056b3;
-  }
 }
 
 /* Responsive adjustments */
@@ -59,9 +15,5 @@
   .nftListContainer {
     flex-direction: column;
     gap: 20px;
-  }
-
-  .nftItem {
-    width: 100%;
   }
 }
