--- a/src/components/NFTList/NFTList.module.scss
+++ b/src/components/NFTList/NFTList.module.scss
@@ -4,6 +4,7 @@
   max-width: 1200px;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   margin: 0 auto;
   margin-top: 2rem;
   padding: 0;
@@ -14,6 +15,5 @@
 @media (max-width: 600px) {
   .nftListContainer {
     flex-direction: column;
-    gap: 20px;
   }
 }
