--- a/src/components/WalletButton/WalletButton.module.scss
+++ b/src/components/WalletButton/WalletButton.module.scss
@@ -1,18 +1,16 @@
 .walletContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 16px;
-  background-color: #f0f0f0;
-  border-radius: 8px;
+  align-items: end;
 
   button {
     max-width: 300px;
+    height: 50px;
+    font-weight: bold;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     background-color: #007bff;
-    color: #fff;
     border: none;
     padding: 8px 16px;
     border-radius: 4px;
