--- a/src/components/referralModal/ReferralModal.module.scss
+++ b/src/components/referralModal/ReferralModal.module.scss
@@ -22,8 +22,15 @@
 
   .closeButton {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 5px;
+    right: 5px;
+    background-color: #fff;
+    font-size: 1.2rem;
+    font-weight: bold;
+    border: 0;
+    &:active{
+      outline: none;
+    }
   }
 
   header {
@@ -67,21 +74,31 @@ ul {
   input[type="text"] {
     background-color: #242424;
     box-sizing: border-box;
+    border-radius: 50px;
     width: 100%;
-    padding: 8px;
-    font-size: 1.1rem;
+    height: 3rem;
+
+    padding: 15px;
     text-align: center;
     border-radius: 4px;
     border: 1px solid #ccc;
-    margin-bottom: 10px;
+    border-radius: 5px;
+    font-size: 1.2rem;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    &:focus {
+      outline: none;
+      box-shadow: none;
+    }
   }
 
   button {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
+    font-size: 1.2rem;
+    margin-top: 15px;
     
     &:focus {
       outline: none;
