--- a/src/components/NFTList/NFTList.module.scss
+++ b/src/components/NFTList/NFTList.module.scss
@@ -11,6 +11,12 @@
   list-style-type: none;
 }
 
+.emptyElements {
+  padding: 50px;
+  margin-top: 50px;
+  border: 3px dashed;
+}
+
 /* Responsive adjustments */
 @media (max-width: 600px) {
   .nftListContainer {
